--- a/index.html
+++ b/index.html
@@ -8,19 +8,67 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles\main.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <header>
     <h1>Remote OPCUA Manager</h1>
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="#config">Config</a>
-        <a href="#about">About</a>
+        <a href="#profile"><span class="material-symbols-outlined">account_circle</span></a>
     </div>
 </header>
 
 <body>
-
-
+    <div class="flexgrid">
+        <div class="sidebar">
+            <ul>
+                <li>Device1</li>
+                <li>Device2</li>
+                <li>Device3</li>
+                <li>Device4</li>
+            </ul>
+        </div>
+        <div class="configsection">
+            <table>
+                <tr>
+                    <th>Company</th>
+                    <th>Contact</th>
+                    <th>Country</th>
+                </tr>
+                <tr>
+                    <td>Alfreds Futterkiste</td>
+                    <td>Maria Anders</td>
+                    <td>Germany</td>
+                </tr>
+                <tr>
+                    <td>Centro comercial Moctezuma</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                </tr>
+                <tr>
+                    <td>Ernst Handel</td>
+                    <td>Roland Mendel</td>
+                    <td>Austria</td>
+                </tr>
+                <tr>
+                    <td>Island Trading</td>
+                    <td>Helen Bennett</td>
+                    <td>UK</td>
+                </tr>
+                <tr>
+                    <td>Laughing Bacchus Winecellars</td>
+                    <td>Yoshi Tannamuri</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <td>Magazzini Alimentari Riuniti</td>
+                    <td>Giovanni Rovelli</td>
+                    <td>Italy</td>
+                </tr>
+            </table>
+        </div>
+    </div>
     <script src="scripts\main.js" async defer></script>
 </body>
 
