--- a/index.html
+++ b/index.html
@@ -23,48 +23,34 @@
     <div class="flexgrid">
         <div class="sidebar">
             <ul>
-                <li>Device1</li>
-                <li>Device2</li>
-                <li>Device3</li>
-                <li>Device4</li>
+                <li id="name">Device1</li>
+                <li id="ip"></li>
+                <li id="port"></li>
+                <li></li>
             </ul>
         </div>
         <div class="configsection">
             <table>
                 <tr>
-                    <th>Company</th>
-                    <th>Contact</th>
-                    <th>Country</th>
+                    <th>Enable</th>
+                    <th>Tagname</th>
+
                 </tr>
                 <tr>
-                    <td>Alfreds Futterkiste</td>
-                    <td>Maria Anders</td>
-                    <td>Germany</td>
+                    <td id="in_enable_1"></td>
+                    <td id="1"></td>
                 </tr>
                 <tr>
-                    <td>Centro comercial Moctezuma</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
+                    <td id="in_enable_2"></td>
+                    <td id="2"></td>
                 </tr>
                 <tr>
-                    <td>Ernst Handel</td>
-                    <td>Roland Mendel</td>
-                    <td>Austria</td>
+                    <td id="out_enable_1"></td>
+                    <td id="3"></td>
                 </tr>
                 <tr>
-                    <td>Island Trading</td>
-                    <td>Helen Bennett</td>
-                    <td>UK</td>
-                </tr>
-                <tr>
-                    <td>Laughing Bacchus Winecellars</td>
-                    <td>Yoshi Tannamuri</td>
-                    <td>Canada</td>
-                </tr>
-                <tr>
-                    <td>Magazzini Alimentari Riuniti</td>
-                    <td>Giovanni Rovelli</td>
-                    <td>Italy</td>
+                    <td id="out_enable_2"></td>
+                    <td id="4"></td>
                 </tr>
             </table>
         </div>
