--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="flexgrid">
         <div class="sidebar">
             <ul>
+                <h2 style="border-bottom: 1px solid #dddd;">Device</h2>
                 <li id="name">Device1</li>
                 <li id="ip"></li>
                 <li id="port"></li>
-                <li></li>
             </ul>
         </div>
         <div class="configsection">
