--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li id="name">Device1</li>
                 <li id="ip"></li>
                 <li id="port"></li>
+                <li><button class="writeButton" onclick="writeToFile()">Push</button></li>
             </ul>
         </div>
         <div class="configsection">
@@ -35,26 +36,45 @@
                     <th>Port</th>
                     <th>Enable</th>
                     <th>Tagname</th>
-
                 </tr>
                 <tr>
                     <td>IN1</td>
-                    <td id="in_enable_1"></td>
+                    <td>
+                        <label class="switch">
+                            <input id="in_enable_1" name=in_value_1 type="checkbox" onclick=myFunction()>
+                            <span class="slider"></span>
+                        </label>
+                    </td>
                     <td id="1"></td>
                 </tr>
                 <tr>
                     <td>IN2</td>
-                    <td id="in_enable_2"></td>
+                    <td>
+                        <label class="switch">
+                            <input  id="in_enable_2" name=in_value_1 type="checkbox" onclick=myFunction()>
+                            <span class="slider"></span>
+                        </label>
+                    </td>
                     <td id="2"></td>
                 </tr>
                 <tr>
                     <td>OUT1</td>
-                    <td id="out_enable_1"></td>
+                    <td>
+                        <label class="switch">
+                            <input  id="out_enable_1" name=in_value_1 type="checkbox" onclick=myFunction()>
+                            <span class="slider"></span>
+                        </label>
+                    </td>
                     <td id="3"></td>
                 </tr>
                 <tr>
                     <td>OUT2</td>
-                    <td id="out_enable_2"></td>
+                    <td>
+                        <label class="switch">
+                            <input  id="out_enable_2" name=in_value_1 type="checkbox" onclick=myFunction()>
+                            <span class="slider"></span>
+                        </label>
+                    </td>
                     <td id="4"></td>
                 </tr>
             </table>
